--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <h2>Kittens, Puppies, Rabbits and more...</h2>
     
+    <ul>
+        <li>Kittens</li>
+        <li>Puppies</li>
+        <li>Bunnies</li>
+        <li>Snakes</li>
+    </ul>
 
 </body>
 </html>
