--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt rerum cumque quae possimus minima quaerat! Autem reiciendis sed quos voluptate voluptatibus? Consequuntur sint molestias vero, hic molestiae dolorum incidunt voluptas cum provident blanditiis tenetur eaque aut natus fuga corporis debitis repellendus dicta alias facere quisquam amet ipsam ea quod saepe.</p>
 
+    <div class="copyrights">
+        <p>All Rights Reserved ©</p>
+    </div>
 
 </body>
 </html>
