--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
 
     <img class="home-image" src="assets/images/puppy.jpg">
 
+
+    <div class="copyrights">
+        <p>All Rights Reserved ©</p>
+    </div>
+
 </body>
 </html>
